--- a/.github/workflows/python_app.yml
+++ b/.github/workflows/python_app.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Run tests
         if: ${{ inputs.runTest }}
+         pytest tests/ --maxfail=1 --disable-warnings -v
         env:
           OPENWEATHER_API_KEY: '${{ secrets.OPENWEATHER_API_KEY }}'
         run: pytest
